--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1161,7 +1161,8 @@ nav.sidebar .nav-link:hover {
   }
 
   .btn-sm {
-    padding-block: 8px;
+    padding-block: 12px;
+    padding-inline: 32px;
     font-size: 16px;
     font-weight: 600;
     line-height: 22px;
