--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -860,7 +860,7 @@ nav.sidebar .nav-link:hover {
 
 .fun-creator-page-content {
   background-color: var(--secondary);
-  background-image: url('../images/campina/bg-fun-creator-content.png');
+  background-image: url('https://campina.jamalapriadi.com/storage/2023/09/1694519794.BG_Yellow.jpg');
 }
 
 .fun-creator-page-content-menu a {
