--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1377,3 +1377,59 @@ nav.sidebar .nav-link:hover {
   width: auto;
   height: -webkit-fill-available;
 }
+
+/* timeline */
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 3px;
+  background-color: #e6e6e6;
+  border-radius: 77px;
+  top: 0;
+  bottom: 0;
+  left: 100px;
+}
+
+.timeline .timeline-item {
+  padding-bottom: 80px;
+}
+
+.timeline .timeline-item:nth-child(1) {
+  padding-top: 80px;
+}
+
+.timeline .timeline-item .timeline-item-right {
+  padding-left: 87px;
+}
+
+.timeline .timeline-item .timeline-item-right::after {
+  content: '';
+  position: absolute;
+  width: 3px;
+  background-color: #e6e6e6;
+  border-radius: 77px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.timeline .timeline-item .timeline-item-right::before {
+  content: '';
+  position: absolute;
+  width: 7px;
+  height: 45px;
+  background-color: var(--primary);
+  border-radius: 32px;
+  top: 50%;
+  left: -2px;
+  transform: translateY(-50%);
+  z-index: 1;
+}
+
+.timeline .timeline-item .timeline-item-left {
+  padding-right: 36px;
+  display: flex;
+  align-items: center;
+  min-width: 100px;
+  max-width: 100px;
+}
