add load more function

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1392,6 +1392,7 @@ nav.sidebar .nav-link:hover {
 
 .timeline .timeline-item {
   padding-bottom: 80px;
+  display: none;
 }
 
 .timeline .timeline-item:nth-child(1) {
