--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1434,3 +1434,26 @@ nav.sidebar .nav-link:hover {
   min-width: 100px;
   max-width: 100px;
 }
+
+/* immage showcase */
+.image-showcase {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  }
+  
+.image-showcase .image-1 { grid-area: 3 / 1 / 6 / 4; }
+.image-showcase .image-2 { grid-area: 2 / 4 / 4 / 6; }
+.image-showcase .image-3 { grid-area: 1 / 6 / 4 / 10; }
+.image-showcase .image-4 { grid-area: 4 / 8 / 7 / 10; }
+.image-showcase .image-5 { grid-area: 4 / 4 / 8 / 8; }
+.image-showcase .image-6 { grid-area: 3 / 10 / 6 / 13; }
+
+.image-showcase img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 18px;
+}
