--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -290,7 +290,7 @@ h6 {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(180deg, #613640 0%, rgba(217, 217, 217, 0) 100%);
+  background: linear-gradient(180deg, #0000006f 0%, rgba(254, 255, 0, 0) 100%);
 }
 
 .nav-tabs .nav-link {
